	PR ipa/60854 	* ipa.c (symtab_remove_unreachable_nodes): Mark targets of 	external aliases alive, too. 	* g++.dg/torture/pr60854.C: New testcase.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@209459 138bc75d-0d04-0410-961f-82ee72b054a4